# Converters

./: .gitignore  .gitlab-ci.yml  Dockerfile.test  LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  unit-tests.yml
build_scripts/: build_versioned_pyproject
converters/: __init__.py  _utils.py  converter.py
converters/contrib/: country.py  dataframe.py  datetime.py  django_model.py  django_model_xml.py  money.py  str.py  xml.py
django-test-site/django_site/: settings.py
test_version_combinations/: 3.10  3.11  3.12  3.8  3.9  max  min
tests/: _test_utils.py  conftest.py  test_converter.py  test_converter_country.py  test_converter_dataframe.py  test_converter_django_model.py  test_converter_django_model_xml.py  test_converter_xml.py
tests/__snapshots__/: test_converter.ambr  test_converter_dataframe.ambr
tests/django/django_app/: apps.py  models.py
tests/django/django_site/: asgi.py  settings.py  urls.py
