[tool.poetry]
name = "converters"
version = "0.1.0"
description = "Write conversions between python objects using an expressive and declarative class-based API"
authors = ["7bridges <os@the7bridges.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
pydash = ">=4.9.3"
# Optional dependencies should go between these markers. When generating a pyproject.toml to install
# for a particular test dependency combination these are removed and replaced with concrete
# versions.
# TEST VERSIONS INSERTION POINT
lxml = {version = ">=4.6.3", optional = true}
python-dateutil = {version = ">=2.8.1", optional = true}
pytz = {version = ">=2021.1", optional = true}
Django = {version = ">=2.1", optional = true}
Unidecode = {version = ">=1.2.0", optional = true}
pandas = {version = ">=0.25.3", optional = true}
django-countries = {version = ">=7.1", optional = true}
py-moneyed = {version = ">=1.2", optional = true}
# TEST VERSIONS INSERTION POINT END

[tool.poetry.dev-dependencies]
pytest = ">=6.2.2"
syrupy = ">=1.2.2"
pytest-django = ">=4.2.0"
pytest-mock = ">=3.6.0"

[tool.poetry.extras]
# ℹ️ if you update any of these, be sure to update "all = [...]" as well, so that it's easy to get
# all dependencies for testing. You can install any one of these sets using e.g.
#   poetry install -E django_xml
datetime = ["python-dateutil", "pytz"]
django = ["Django", "django-countries"]
django_xml = ["Django", "django-countries", "unidecode", "lxml"]
moneyed = ["py-moneyed"]
pandas = ["pandas"]
unidecode = ["unidecode"]
xml = ["lxml"]

all = [
    "Django",
    "django-countries",
    "lxml",
    "pandas",
    "python-dateutil",
    "py-moneyed",
    "pytz",
    "unidecode"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
